--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML LANG="EN">
 <head>
-<title>Electronic Switch</title>
+<title>Eagle ltd</title>
 <META CHARSET="UTF-8">
 </head>
 <body>
